--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Jason Galloway",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0"
   },
